<resources>
    <string name="app_name">CarChecker</string>

    <string name="user_name">HOWO VIỆT NHẬT (ĐL TÙNG LÂM)</string>
    <!-- Strings related to login -->
    <string name="prompt_user">Tên đăng nhập</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập hoặc đăng kí</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="error_invalid_email">This mUserName must not empty</string>
    <string name="error_invalid_password">This password must not empty</string>
    <string name="error_incorrect_password">This password or user is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_splash_screen">SplashScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="slogan_company">HỆ THỐNG KIỂM SOÁT HỖ TRỢ PHƯƠNG TIỆN VẬN TẢI</string>
    <string name="msg_loging">Đang đăng nhập</string>
    <string name="contact">Liên hệ: </string>
    <string name="mien_bac">Miền Bắc</string>
    <string name="mien_nam">Miền Nam</string>
    <string name="number_car">Số xe: 120</string>


    <!-- Menu of NavigationView -->
    <string name="position">Vị trí</string>
    <string name="review_hanh_trinh">Xem lại hành trình</string>
    <string name="report">Báo cáo</string>

    <string name="report_qcvn31">Báo cáo QCVN31</string>
    <string name="hanh_trinh">Hành trình</string>
    <string name="speed">Tốc độ</string>
    <string name="over_speed">Quá tốc độ</string>
    <string name="drive_time">Thời gian lái</string>
    <string name="parking">Dừng đỗ</string>
    <string name="report_by_traffic">Tổng hợp theo xe</string>
    <string name="report_by_driver">Tổng hợp theo lái xe</string>

    <string name="report_enterprise">Báo cáo doanh nghiệp</string>
    <string name="report_by_day">Tổng hợp theo ngày</string>
    <string name="report_by_operation_detail">Chi tiết hoạt động</string>
    <string name="report_input_status">Báo cáo trạng thái đầu vào</string>
    <string name="report_worked_time">Thời gian làm việc</string>
    <string name="chart_fuel">Biểu đồ nguyên liệu</string>
    <string name="chart_speed">Biểu đồ vận tốc</string>

    <string name="management">Quản lý</string>
    <string name="manage_sub_account">Quản lý tài khoản con</string>
    <string name="company_info">Thông tin công ty</string>
    <string name="driver_info">Thông tin lái xe</string>
    <string name="traffic_info">Thông tin xe</string>
    <string name="worked_time">Thời gian làm việc</string>
    <string name="pass_point_control">Qua điểm kiểm soát</string>

    <string name="another">Khác</string>
    <string name="util">Tiện ích</string>
    <string name="guide">Hướng dẫn</string>
    <string name="logout">Đăng xuất</string>
    <!--End-->

    <string name="review">Xem lại</string>
    <string name="take_care_customer">Hỗ trợ chăm sóc khách hàng</string>
    <string name="hotline">Hotline: </string>
    <string name="hotline_numberic"><u>190011</u></string>
    <string name="vn_north_text">(Miền Bắc)</string>
    <string name="vn_north_phone"><u>016483910126</u></string>
    <string name="vn_south_text">(Miền Nam)</string>
    <string name="vn_south_phone"><u>01648222086</u></string>
    <string name="email">Email: </string>
    <string name="my_email"><u>AAA@gmail.com</u></string>
    <string name="website">Website: </string>
    <string name="my_website"><u>avcccc.com</u></string>
    <string name="logout_msg">Bạn có muốn đăng xuất tài khoản?</string>
    <string name="fake_msg_data"><b>Loại xe</b>: HoWo \n<b>Biển số</b>: 29C-64344 \n<b>Số VIN</b>: Chưa cập nhập \n<b>Lái xe</b>: Nguyen Van T \n<b>Số GPLX</b>: chưa cập nhập \n<b>Hạn GPLX</b>: chưa cập nhập</string>
    <string name="confirm">Xác nhận</string>
    <string name="watch">xem</string>
    <string name="stop">dừng</string>
    <string name="itinerary">hành trình</string>
    <string name="can_not_call_number_msg">Không thể gọi tới số</string>
    <string name="search_hint">Tìm kiếm theo biển số xe</string>
    <string name="inform_press_back_again">Bấm phím back một lần nữa để thoát chương trình</string>

    <string name="location">Vị trí</string>

    <string-array name="speed">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>800</item>
        <item>1000</item>
        <item>1500</item>
    </string-array>

    <!--font name-->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_black">sans-serif-black</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>

    <string name="notice">Thông báo</string>
    <string name="network_error">Xin hãy kiểm tra lại kết nối mạng và thử lại sau.</string>
    <string name="btn_ok">Đồng ý</string>
    <string name="btn_cancel">Từ chối</string>
    <string name="from_hour">Từ giờ</string>
    <string name="to_hour">Đến giờ</string>
    <string name="day">Ngày</string>
    <string name="number_plate">Biển số</string>
    <string name="choose_vehicle">Chọn xe</string>
    <string name="load_data">Tải dữ liệu</string>
    <string name="hint_search_number_plate">Tìm xe</string>
    <string name="prompt_choose_vehicle">Hãy chọn xe</string>
</resources>
