<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/table_layout_fragment_itinerary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_table_30dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:alpha="0.5"
                android:src="@drawable/ic_access_time_black_24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/from_hour"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/from_hour_fragment_itinerary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:clickable="true"
                android:text="10:23"
                android:textAppearance="?attr/textAppearanceListItem" />
        </TableRow>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:alpha="0.5"
                android:src="@drawable/ic_access_time_black_24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/to_hour"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/to_hour_fragment_itinerary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:clickable="true"
                android:text="23:00"
                android:textAppearance="?attr/textAppearanceListItem" />
        </TableRow>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:alpha="0.5"
                android:src="@drawable/calendar_icons" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/day"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/date_fragment_itinerary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:clickable="true"
                android:text="2017/1/18"
                android:textAppearance="?attr/textAppearanceListItem" />
        </TableRow>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:alpha="0.5"
                android:src="@drawable/car" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/number_plate"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/number_plate_fragment_itinerary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/choose_vehicle"
                android:textAppearance="?attr/textAppearanceListItem" />
        </TableRow>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_load_data_fragment_itinerary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/load_data" />

            <Button
                android:id="@+id/btn_review_fragment_itinerary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/review" />
        </TableRow>
    </TableLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_fragment_pos_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/status_table_item"/>

</LinearLayout>
